# rustpost

./: Cargo.toml  LICENSE  README.md
api/: .env  Cargo.toml  README.md  setup.sql  undo.sql
api/src/: lib.rs  main.rs
api/src/admin_token/: api.rs  deps.rs
api/src/common/: api.rs  error.rs  mod.rs
api/src/common/utils/: auth.rs  db.rs  macros.rs  mod.rs
api/src/create_post/: api.rs  deps.rs  error.rs  mod.rs
api/src/delete_post/: api.rs  deps.rs  error.rs  mod.rs  tests.rs
api/src/edit_post/: api.rs  deps.rs  mod.rs
api/src/get_identity/: api.rs  deps.rs  mod.rs
api/src/get_post/: api.rs  deps.rs  mod.rs
api/src/get_posts_for_index/: api.rs  deps.rs  mod.rs
api/src/user_register/: api.rs  deps.rs  mod.rs
api/src/user_token/: api.rs  deps.rs  error.rs  mod.rs
createadmin/: Cargo.toml
createadmin/src/: main.rs
restapi/: .env  Cargo.toml  README.md  setup.sql
restapi/src/: lib.rs  main.rs
restapi/src/admin_login/: api.rs  deps.rs  error.rs  mod.rs
restapi/src/common/: db.rs  error.rs  mod.rs
restapi/src/create_post/: api.rs  deps.rs  mod.rs
restapi/src/delete_post/: api.rs  deps.rs  mod.rs  tests.rs
restapi/src/edit_post/: api.rs  deps.rs  error.rs
restapi/src/get_identity/: api.rs  deps.rs  mod.rs
restapi/src/get_post/: api.rs  deps.rs  error.rs
restapi/src/get_posts_for_index/: api.rs  deps.rs  mod.rs
restapi/src/get_user/: api.rs  deps.rs  error.rs  mod.rs
restapi/src/list_posts/: api.rs  deps.rs  mod.rs
restapi/src/list_posts_by_creator/: api.rs  deps.rs  error.rs  mod.rs
restapi/src/user_login/: api.rs  deps.rs  (+1 more)
(+6 files in other folders)
