[package]
name = "rustpost-api"
version = "0.1.0"
authors = ["Jason5Lee <jason5lee@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"

futures-util = "0.3"
once_cell = "1.8"
dotenv = "0.15"
log = "0.4"
env_logger = "0.8"
async-trait = "0.1"
url = "2.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sqlx = { version = "0.4", features = ["mysql", "runtime-actix-rustls"] }
base64 = "0.13"
aes-gcm = "0.9"
rand = "0.8"
bcrypt = "0.10"
humantime = "2.1"
rs-snowflake = "0.5"
parking_lot = "0.11"
envy = "0.4"
