[package]
name = "rustpost-createadmin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
bcrypt = "0.10"
mysql = "21.0"
getrandom = "0.2"
base64 = "0.13"
